<resources>
    <string name="app_name">Test Persistencia SQL</string>
    <string name="nombre_investigacion">Caracterización de los mecanismos de persistencia local en dispositivos móviles con Android</string>
    <string name="resumen_investigacion">El objetivo de esta aplicación es evaluar el comportamiento de una persistencia local con SQL</string>
    <string name="titulo_mecanismo">Almacenamiento de Datos Estructurados</string>
    <string name="op_agregar">Opción de Agregar</string>
    <string name="op_consultar">Opción de Consultar</string>
    <string name="op_modificar">Opción de Modificar</string>
    <string name="op_eliminar">Opción de Eliminar</string>
    <string name="texto_op">A continuación se encuentran cuatro botones, cada uno de ellos hace referencia a las operaciones de manejo de datos con los cuales se evaluara el comportamiento del mecanismo a trabajar.</string>
    <string name="texto_agregar">A continuación se muestran tres botones, cada uno de ellos cumple la función de almacenar poca, mediana y gran cantidad de información haciendo uso del mecanismo de persistencia de ficheros.</string>
    <string name="pequena_inf">Pequeña información</string>
    <string name="mediana_inf">Mediana información</string>
    <string name="grande_inf">Grande información</string>
    <string name="texto_eliminar">A continuación se muestra un botón que tiene la función de eliminar toda la información almacenada</string>
    <string name="eliminar_inf">Eliminar información</string>
    <string name="texto_consultar">A continuación se listaran los empleados almacenados</string>
    <string name="texto_modificar">A continuación se muestra una serie de apartados que permitiran modificar los datos de todos los empleados</string>
    <string name="nombre">Nombre(s)</string>
    <string name="h_nombre">Ingresar nombre(s)</string>
    <string name="mod_nombre">Modificar nombres</string>
    <string name="apellido">Apellido(s)</string>
    <string name="h_apellido">Ingresar apellido(s)</string>
    <string name="mod_apellido">Modificar apellidos</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">M</string>
    <string name="femenino">F</string>
    <string name="mod_sexo">Modificar sexos</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="mod_fecha_nacimiento">Modificar fechas de nacimiento</string>
    <string name="fecha_ingreso">Fecha de ingreso</string>
    <string name="mod_fecha_ingreso">Modificar fechas de ingreso</string>
    <string name="salario">Salario</string>
    <string name="mod_salario">Modificar salarios</string>
    <string name="h_salario">Ingresar salario</string>
    <string name="estado">Se encuentra activo</string>
    <string name="mod_estado">Modificar estados de empleados</string>
    <string name="estado_activo">Activo</string>
    <string name="estado_no_activo">No activo</string>
</resources>
