<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.umariana.com.testpersistenciasql.PersistenciaSql">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_mecanismo"
                android:gravity="center"
                android:textSize="25dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/texto_op"/>

            <Button
                android:id="@+id/btn_agregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/op_agregar"/>

            <Button
                android:id="@+id/btn_consultar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/op_consultar"/>

            <Button
                android:id="@+id/btn_modificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/op_modificar"/>
            <Button
                android:id="@+id/btn_eliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/op_eliminar"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
