<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.umariana.com.testpersistenciasql.OpcionModificar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/op_modificar"
                android:gravity="center"
                android:textSize="25dp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_mod_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/mod_nombre"/>

            <Button
                android:id="@+id/btn_mod_fecha_ingreso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mod_fecha_ingreso"/>

            <Button
                android:id="@+id/btn_mod_salario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mod_salario"/>

            <Button
                android:id="@+id/btn_mod_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mod_estado"/>

            <Button
                android:id="@+id/btn_mod_todo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Modificar todos los campos"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
